// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RampsChangeProviderFooter matches snapshot 1`] = `
<div>
  <div
    class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
    data-testid="ramps-change-provider-footer"
  >
    <p
      class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
    >
      Buying via Transak.
    </p>
    <button
      class="inline-flex items-center justify-center font-medium overflow-hidden relative duration-100 ease-linear active:ease-[cubic-bezier(0.3,0.8,0.3,1)] h-auto rounded-none bg-transparent px-0 transform-none transition-none active:scale-100 text-primary-default hover:text-primary-default-hover hover:underline hover:decoration-primary-default-hover hover:decoration-2 hover:underline-offset-4 active:text-primary-default-pressed active:decoration-primary-default-pressed"
      data-testid="ramps-change-provider-button"
      role="button"
    >
      <span
        class="text-inherit text-s-body-md leading-s-body-md tracking-s-body-md md:text-l-body-md md:leading-l-body-md md:tracking-l-body-md font-medium font-default"
      >
        Change provider.
      </span>
    </button>
  </div>
</div>
`;

exports[`RampsChangeProviderFooter matches snapshot when disabled 1`] = `
<div>
  <div
    class="flex flex-row gap-1 items-center justify-center border-t border-border-muted px-4 py-3"
    data-testid="ramps-change-provider-footer"
  >
    <p
      class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
    >
      Buying via Transak.
    </p>
    <p
      class="text-alternative text-s-body-sm leading-s-body-sm tracking-s-body-sm md:text-l-body-sm md:leading-l-body-sm md:tracking-l-body-sm font-regular font-default"
    >
      Change provider.
    </p>
  </div>
</div>
`;
